Add MIT license with proper attribution and AI assistance disclosure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
+<!--
+  Image to PDF Converter
+  
+  A modern web application for converting images to PDF with drag-and-drop functionality,
+  image reordering, and dark/light mode themes.
+  
+  Developer: Theov
+  License: MIT License
+  
+  AI Assistance Disclosure:
+  This project was developed with assistance from GitHub Copilot, an AI-powered coding assistant.
+  The AI helped with code structure, UI/UX patterns, documentation, and accessibility features.
+  All creative decisions and project vision remain the work of the human developer.
+-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
